<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scroll"
    tools:context=".EditNumbersActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/hdln_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:id="@+id/hdln_number"
            android:layout_alignLeft="@+id/e_number1_edit"
            android:layout_alignStart="@+id/e_number1_edit" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name1_edit"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number1_edit"
            android:layout_alignTop="@+id/e_name1_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name2_edit"
            android:layout_alignTop="@+id/e_number2_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number2_edit"
            android:layout_below="@+id/e_number1_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name3_edit"
            android:layout_below="@+id/e_name2_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number3_edit"
            android:layout_below="@+id/e_number2_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name4_edit"
            android:layout_above="@+id/e_number5_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number4_edit"
            android:layout_below="@+id/e_number3_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name5_edit"
            android:layout_alignTop="@+id/e_number5_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number5_edit"
            android:layout_below="@+id/e_number4_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name6_edit"
            android:layout_below="@+id/e_name5_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number6_edit"
            android:layout_below="@+id/e_number5_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name7_edit"
            android:layout_below="@+id/e_name6_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number7_edit"
            android:layout_below="@+id/e_number6_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name8_edit"
            android:layout_above="@+id/e_number9_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number8_edit"
            android:layout_below="@+id/e_number7_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name9_edit"
            android:layout_alignTop="@+id/e_number9_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number9_edit"
            android:layout_below="@+id/e_number8_edit"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_name"
            android:id="@+id/e_name10_edit"
            android:layout_below="@+id/e_name9_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_number"
            android:id="@+id/e_number10_edit"
            android:layout_below="@+id/e_number9_edit"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button_save"
            android:layout_below="@+id/e_name10_edit"
            android:layout_alignRight="@+id/hdln_number"
            android:layout_alignEnd="@+id/hdln_number"
            android:layout_marginTop="48dp" />




    </RelativeLayout>
</ScrollView>